bindings/java/src/com/onepub/revault/RevaultNativeApi.java


  public RevaultNativeApi(SymbolLookup symbols) {
    this.linker = Linker.nativeLinker();
    this.symbols = symbols;
    api_abi_version = linker.downcallHandle(symbols.find("api_abi_version").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_INT));
    buffer_last_error = linker.downcallHandle(symbols.find("buffer_last_error").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS));
    buffer_last_error_details = linker.downcallHandle(symbols.find("buffer_last_error_details").orElseThrow(), FunctionDescriptor.of(BUFFER));
    buffer_free = linker.downcallHandle(symbols.find("buffer_free").orElseThrow(), FunctionDescriptor.ofVoid(BUFFER));
    secret_len = linker.downcallHandle(symbols.find("secret_len").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    secret_copy = linker.downcallHandle(symbols.find("secret_copy").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    secret_free = linker.downcallHandle(symbols.find("secret_free").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    lockbox_format_version = linker.downcallHandle(symbols.find("lockbox_format_version").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_SHORT));
    lockbox_probe_format_version = linker.downcallHandle(symbols.find("lockbox_probe_format_version").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_create = linker.downcallHandle(symbols.find("lockbox_create").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_create_with_options = linker.downcallHandle(symbols.find("lockbox_create_with_options").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG));
    lockbox_create_password = linker.downcallHandle(symbols.find("lockbox_create_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_create_contact = linker.downcallHandle(symbols.find("lockbox_create_contact").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    lockbox_create_with_signing_key = linker.downcallHandle(symbols.find("lockbox_create_with_signing_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    lockbox_open = linker.downcallHandle(symbols.find("lockbox_open").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_open_with_options = linker.downcallHandle(symbols.find("lockbox_open_with_options").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG));
    lockbox_open_password = linker.downcallHandle(symbols.find("lockbox_open_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_open_contact = linker.downcallHandle(symbols.find("lockbox_open_contact").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    lockbox_add_file = linker.downcallHandle(symbols.find("lockbox_add_file").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BOOLEAN));
    lockbox_add_file_with_permissions = linker.downcallHandle(symbols.find("lockbox_add_file_with_permissions").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT, ValueLayout.JAVA_BOOLEAN));
    lockbox_get_file = linker.downcallHandle(symbols.find("lockbox_get_file").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_extract_file = linker.downcallHandle(symbols.find("lockbox_extract_file").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BOOLEAN));
    lockbox_extract_directory = linker.downcallHandle(symbols.find("lockbox_extract_directory").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BOOLEAN, ValueLayout.JAVA_BOOLEAN, ValueLayout.JAVA_BOOLEAN));
    lockbox_stream_content = linker.downcallHandle(symbols.find("lockbox_stream_content").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_BOOLEAN));
    lockbox_cache_stats = linker.downcallHandle(symbols.find("lockbox_cache_stats").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_import_stats = linker.downcallHandle(symbols.find("lockbox_import_stats").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_reset_import_stats = linker.downcallHandle(symbols.find("lockbox_reset_import_stats").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));
    lockbox_inspect_file = linker.downcallHandle(symbols.find("lockbox_inspect_file").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_page_inspection = linker.downcallHandle(symbols.find("lockbox_page_inspection").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_recovery_report = linker.downcallHandle(symbols.find("lockbox_recovery_report").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_recovery_report_render = linker.downcallHandle(symbols.find("lockbox_recovery_report_render").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_BOOLEAN, ValueLayout.JAVA_LONG));
    lockbox_recovery_scan_path = linker.downcallHandle(symbols.find("lockbox_recovery_scan_path").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_storage_len = linker.downcallHandle(symbols.find("lockbox_storage_len").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    lockbox_set_workload_profile = linker.downcallHandle(symbols.find("lockbox_set_workload_profile").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_set_worker_policy = linker.downcallHandle(symbols.find("lockbox_set_worker_policy").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG));
    lockbox_runtime_options = linker.downcallHandle(symbols.find("lockbox_runtime_options").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_commit = linker.downcallHandle(symbols.find("lockbox_commit").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));
    lockbox_create_dir = linker.downcallHandle(symbols.find("lockbox_create_dir").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BOOLEAN));
    lockbox_delete = linker.downcallHandle(symbols.find("lockbox_delete").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_remove_dir = linker.downcallHandle(symbols.find("lockbox_remove_dir").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BOOLEAN));
    lockbox_create_parent_dirs = linker.downcallHandle(symbols.find("lockbox_create_parent_dirs").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_rename = linker.downcallHandle(symbols.find("lockbox_rename").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_list = linker.downcallHandle(symbols.find("lockbox_list").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BOOLEAN));
    lockbox_list_with_options = linker.downcallHandle(symbols.find("lockbox_list_with_options").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BOOLEAN, ValueLayout.JAVA_BOOLEAN, ValueLayout.JAVA_BOOLEAN, ValueLayout.JAVA_BOOLEAN, ValueLayout.JAVA_LONG));
    lockbox_stat = linker.downcallHandle(symbols.find("lockbox_stat").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_set_variable = linker.downcallHandle(symbols.find("lockbox_set_variable").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_set_secret_variable = linker.downcallHandle(symbols.find("lockbox_set_secret_variable").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_get_variable = linker.downcallHandle(symbols.find("lockbox_get_variable").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_get_secret_variable = linker.downcallHandle(symbols.find("lockbox_get_secret_variable").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    lockbox_delete_variable = linker.downcallHandle(symbols.find("lockbox_delete_variable").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_move_variables = linker.downcallHandle(symbols.find("lockbox_move_variables").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_list_variables = linker.downcallHandle(symbols.find("lockbox_list_variables").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_variable_sensitivity = linker.downcallHandle(symbols.find("lockbox_variable_sensitivity").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_add_symlink = linker.downcallHandle(symbols.find("lockbox_add_symlink").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BOOLEAN));
